--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 								<li><a href="contact-us.html" class="button special">Request a quote</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Discover more...</a>
+						<a href="#one" class="more scrolly">Our Portfolios...</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Our Services</h2>
+								<h2>Our Portfolios</h2>
 								<p>With MyKetapang Group, your ideas shaped with our creativity into reality.<br />
 								From individuals to organization, MyKetapang helps local businesses achieve their IT goals,<br />
 								overcome challenges by adapting and excel in latest trending of technology.</p>
