--- a/pricing.html
+++ b/pricing.html
@@ -52,6 +52,70 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+								<div class="container">
+  <h2>Dynamic Tabs</h2>
+  <p>To make the tabs toggleable, add the data-toggle="tab" attribute to each link. Then add a .tab-pane class with a unique ID for every tab and wrap them inside a div element with class .tab-content.</p>
+
+  <ul class="nav nav-tabs">
+    <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
+    <li><a data-toggle="tab" href="#menu1">Conference</a></li>
+    <li><a data-toggle="tab" href="#menu2">Organization</a></li>
+    <li><a data-toggle="tab" href="#menu3">Ecommerce</a></li>
+  </ul>
+
+  <div class="tab-content">
+    <div id="home" class="tab-pane fade in active">
+      <h3>HOME</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-12">&nbsp;</div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+</div>
+    </div>
+    <div id="menu1" class="tab-pane fade">
+      <h3>Conference</h3>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-12">&nbsp;</div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+</div>
+    </div>
+    <div id="menu2" class="tab-pane fade">
+      <h3>Organization</h3>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+      <div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+</div>
+    </div>
+    <div id="menu3" class="tab-pane fade">
+      <h3>Ecommerce</h3>
+      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      <div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+</div>
+    </div>
+  </div>
+</div>
 
 							</div>	
 						</section>
