--- a/pricing.html
+++ b/pricing.html
@@ -52,7 +52,10 @@
 							<p>Here’s a few examples of our past work,<br>
 							To view our full portfolio, click on the button below.</p>
 						</header>
-						
+						<section class="wrapper style5">
+							<div class="inner">
+
+								<section>
 							
 								<div class="container">
   <h2>Dynamic Tabs</h2>
@@ -137,7 +140,8 @@
 					</footer>
 
 			</div>
-
+</section>
+					</article>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
