--- a/pricing.html
+++ b/pricing.html
@@ -57,7 +57,7 @@
 
 								<section>
 							
-								<div class="container">
+								<div class="container" class="col-sm-12">
   <h2>Dynamic Tabs</h2>
   <p>To make the tabs toggleable, add the data-toggle="tab" attribute to each link. Then add a .tab-pane class with a unique ID for every tab and wrap them inside a div element with class .tab-content.</p>
 
