--- a/pricing.html
+++ b/pricing.html
@@ -57,7 +57,7 @@
 
 								<section>
 							
-								<div class="container" class="col-sm-12">
+								<div class="container">
   <h2>Dynamic Tabs</h2>
   <p>To make the tabs toggleable, add the data-toggle="tab" attribute to each link. Then add a .tab-pane class with a unique ID for every tab and wrap them inside a div element with class .tab-content.</p>
 
@@ -73,15 +73,15 @@
       <h3>HOME</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-12">&nbsp;</div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-10">&nbsp;</div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 </div>
     </div>
     <div id="menu1" class="tab-pane fade">
