--- a/pricing.html
+++ b/pricing.html
@@ -73,14 +73,12 @@
       <h3>HOME</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-
-<div class="col-sm-9">&nbsp;</div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 
 </div>
     </div>
