--- a/pricing.html
+++ b/pricing.html
@@ -56,7 +56,7 @@
 							<div class="inner">
 
 								<section>
-							<div class="container">
+							<div class="container-fluid">
 								
   <h2>Examples of Websites</h2>
   <p>To make the tabs toggleable, add the data-toggle="tab" attribute to each link. Then add a .tab-pane class with a unique</p>
