--- a/pricing.html
+++ b/pricing.html
@@ -73,10 +73,10 @@
       <h3>HOME</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-2"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-12">&nbsp;</div>
 <div class="col-sm-12">&nbsp;</div>
 
@@ -86,35 +86,39 @@
       <h3>Conference</h3>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-12">&nbsp;</div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-</div>
+<div class="col-sm-12">&nbsp;</div>
+
+</div></div>
     </div>
     <div id="menu2" class="tab-pane fade">
       <h3>Organization</h3>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
       <div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-12">&nbsp;</div>
+<div class="col-sm-12">&nbsp;</div>
+
 </div>
     </div>
     <div id="menu3" class="tab-pane fade">
       <h3>Ecommerce</h3>
       <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
       <div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-12">&nbsp;</div>
+<div class="col-sm-12">&nbsp;</div>
+
 </div>
     </div>
   </div>
