--- a/pricing.html
+++ b/pricing.html
@@ -79,7 +79,7 @@
 <div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-12">&nbsp;</div>
 <div class="col-sm-12">&nbsp;</div>
-    </div>
+    </div></div>
     <div id="menu1" class="tab-pane fade">
       <h3>Conference</h3>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -90,7 +90,7 @@
 <div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-12">&nbsp;</div>
 <div class="col-sm-12">&nbsp;</div>
-    </div>
+    </div></div>
     <div id="menu2" class="tab-pane fade">
       <h3>Organization</h3>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
@@ -101,7 +101,7 @@
 <div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-12">&nbsp;</div>
 <div class="col-sm-12">&nbsp;</div>
-    </div>
+    </div></div>
     <div id="menu3" class="tab-pane fade">
       <h3>Ecommerce</h3>
       <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
@@ -112,7 +112,7 @@
 <div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-12">&nbsp;</div>
 <div class="col-sm-12">&nbsp;</div>
-  </div>
+  </div></div>
 </div>
 
 							</div>	
