--- a/pricing.html
+++ b/pricing.html
@@ -112,7 +112,7 @@
 <div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-12">&nbsp;</div>
 <div class="col-sm-12">&nbsp;</div>
-  </div>
+  </div></div></div>
 </div>
 
 							</div>	
