--- a/pricing.html
+++ b/pricing.html
@@ -84,10 +84,10 @@
       <h3>Conference</h3>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-DSSC16-01.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-RMFP16-01-01.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-UMICID2016-01.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-btechpum-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="umconference.um.edu.my/dssc16" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-DSSC16-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="umconference.um.edu.my/rmfp2016" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-RMFP16-01-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="umicid2016.weebly.com" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-UMICID2016-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="btechpum.weebly.com" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-btechpum-01.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-12">&nbsp;</div>
 <div class="col-sm-12">&nbsp;</div>
     </div></div>
@@ -95,10 +95,11 @@
       <h3>Organization</h3>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
       <div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-ADUM-01-01-01.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-DRMC-01.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-MAOMS-01.jpg" alt="Lights" style="width:100%"></div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-MAProstho-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="www.myjurnal.my/ojs/index.php/adum/index" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-ADUM-01-01-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="drmc.um.edu.my" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-DRMC-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="maoms.org" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-MAOMS-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="maprostho.com.my" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-MAProstho-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-12">&nbsp;</div>
 <div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-UMERC-01.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-12">&nbsp;</div>
 <div class="col-sm-12">&nbsp;</div>
@@ -107,7 +108,7 @@
       <h3>Ecommerce</h3>
       <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
       <div>
-<div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-Zaraafeeya-01.jpg" alt="Lights" style="width:100%"></div>
+<div class="col-sm-3"><a href="zaraafeeya.com" target="_blank"><img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/Websitepreview-Zaraafeeya-01.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
 <div class="col-sm-3"><a href="http://tazrc.um.edu.my/?modul=Home" target="_blank"><img src="https://www.w3schools.com/w3images/lights.jpg" alt="Lights" style="width:100%"></div>
