--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="http://cdn.leanincircles.org/ui/images/pages/pre-reg/circle-logo-large.png" alt="MRO" height="300" width="300">
+        <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/MA-aina-01.jpg" alt="MRO" height="300" width="300">
         <p style="text-align: center;"><strong>XXXX</strong></p>
         <p style="text-align: center;">Marketing Analysis</p>
 	      <ul style="text-align: center;" class="icons">
