--- a/team.html
+++ b/team.html
@@ -86,7 +86,7 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="https://raw.githubusercontent.com/myketapang/home/gh-pages/images/MA-aina-01.jpg" alt="MRO" height="300" width="300">
-        <p style="text-align: center;"><strong>XXXX</strong></p>
+        <p style="text-align: center;"><strong>Puteri Nurul'Aina</strong></p>
         <p style="text-align: center;">Marketing Analysis</p>
 	      <ul style="text-align: center;" class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
